--- a/OptomechanicalCooling.tex
+++ b/OptomechanicalCooling.tex
@@ -562,11 +562,11 @@ Master equations of the type
 \begin{align}\label{EMField}
 L_a \rho =& - \frac{\kappa}{2}(n_p+1)[a^\dagger a\rho + \rho a^\dagger a -2a\rho a^\dagger] \nonumber \\
  &- \frac{\kappa}{2}(n_p)[ aa^\dagger\rho + \rho  aa^\dagger -2a^\dagger\rho a],
-\end{align} model the behavior of a bosonic field inside a cavity with just one mode and with $\nu$ thermal photons in contact with a thermal bath. $A$ is a constant related to the damping and $A,n_p \geq 0$  \cite{EnglertDB}. The density operator can be expressed in the Lindblad superoperator's eigenbasis to simplify the calculations. This is known as the damping basis \cite{EnglertDB}.
+\end{align} model the behavior of a bosonic field inside a cavity with just one mode and with $n_p$ thermal photons in contact with a thermal bath. $\kappa$ is a constant related to the damping and $\kappa,n_p \geq 0$  \cite{EnglertDB}. The density operator can be expressed in the Lindblad superoperator's eigenbasis to simplify the calculations. This basis is known as the damping basis \cite{EnglertDB}.
 
 \begin{align}\label{DefDB}
-&a^{\dagger l}\frac{(-1)^n}{(n_p+1)^{l+1}}:L_n^l[\frac{a^\dagger a}{n_p+1}]e^{-[\frac{a^\dagger a}{n_p+1}]}:\quad l \geq 0, \\
-&\frac{(-1)^n}{(n_p+1)^{|l|+1}}:L_n^{|l|}[\frac{a^\dagger a}{n_p+1}]e^{-[\frac{a^\dagger a}{n_p+1}]}:a^{|l|}\quad l \leq 0,
+\hat{\rho}_n^l=&a^{\dagger l}\frac{(-1)^n}{(n_p+1)^{l+1}}:L_n^l[\frac{a^\dagger a}{n_p+1}]e^{-[\frac{a^\dagger a}{n_p+1}]}:\quad l \geq 0, \\
+\hat{\rho}_n^l=&\frac{(-1)^n}{(n_p+1)^{|l|+1}}:L_n^{|l|}[\frac{a^\dagger a}{n_p+1}]e^{-[\frac{a^\dagger a}{n_p+1}]}:a^{|l|}\quad l \leq 0,
 \end{align} with eigenvalues
 
 \begin{equation}
@@ -574,31 +574,33 @@ L_a \rho =& - \frac{\kappa}{2}(n_p+1)[a^\dagger a\rho + \rho a^\dagger a -2a\rho
 \end{equation} which fulfill
 
 \begin{equation}
-n=0,1,2...,\qquad l = 0,\pm 1, \pm 2,... 
-\end{equation} These are the right eigenstates, which correspond to $L\hat{\rho_n^l} = \lambda_n^l\hat{\rho_n^l}$, however the left eigenstates must also be considered, these correspond to $\check{\rho_n^l}L = \lambda_n^l\check{\rho_n^l}$ and have the same eigenvalues. These are
+n=0,1,2,...\qquad l = 0,\pm 1, \pm 2,... 
+\end{equation} These are the right eigenstates, which are the eigenvalues of the equation $L\hat{\rho}_n^l = \lambda_n^l\hat{\rho}_n^l$, however the left eigenstates must also be considered, these are the eigenvalues of the equation $\check{\rho}_n^lL = \lambda_n^l\check{\rho}_n^l$ and have the same eigenvalues. These are
 
 \begin{align}\label{DefDBDual}
-&(\frac{-n_p}{n_p+1})^n\frac{n!}{(n+l)!}:L_n^l[\frac{a^\dagger a}{n_p}]:a^{l}\quad l \geq 0, \\
-&(\frac{-n_p}{n_p+1})^n\frac{n!}{(n+|l|)!}a^{\dagger|l|}:L_n^{|l|}[\frac{a^\dagger a}{n_p}]:\quad l \leq 0.
+\check{\rho}_n^l=&(\frac{-n_p}{n_p+1})^n\frac{n!}{(n+l)!}:L_n^l[\frac{a^\dagger a}{n_p}]:a^{l}\quad l \geq 0, \\
+\check{\rho}_n^l=&(\frac{-n_p}{n_p+1})^n\frac{n!}{(n+|l|)!}a^{\dagger|l|}:L_n^{|l|}[\frac{a^\dagger a}{n_p}]:\quad l \leq 0.
 \end{align} These states are orthogonal under the product
 
 \begin{equation}
-Tr[\hat{\rho}_{n,l}\check{\rho}_{n',l'}] = \delta_{n,n'}\delta_{l,l'},
+Tr[\hat{\rho}_n^l\check{\rho}_{n'}^{l'}] = \delta_{n,n'}\delta_{l,l'},
 \end{equation} and also fulfill
 
 \begin{equation}\label{DampingBasisCompleteness}
 \sum_{\lambda} \hat{\rho}_\lambda \otimes \check{\rho}_\lambda = \mathbb{I},
-\end{equation} where the sum is over all possible eigenvalues. An important approximation can be obtained for a cavity at zero temperature, in these case the states are \cite{EnglertDB}
+\end{equation} where the sum is over all possible eigenvalues. An important case is a cavity at zero temperature, in this case the states are \cite{EnglertDB}
 
 \begin{align}\label{DefDBZero}
-&a^{\dagger l}(-1)^{a^\dagger a + n}\binom{n+l}{a^\dagger a+l} \quad l \geq 0, \\
-&(-1)^{a^\dagger a + n}\binom{n+|l|}{a^\dagger a+|l|}a^{|l|} \quad l < 0,
+\hat{\rho}_n^l=&a^{\dagger l}(-1)^{a^\dagger a + n}\binom{n+l}{a^\dagger a+l} \quad l \geq 0, \\
+\hat{\rho}_n^l=&(-1)^{a^\dagger a + n}\binom{n+|l|}{a^\dagger a+|l|}a^{|l|} \quad l < 0,
 \end{align} and the dual states are
 
 \begin{align}\label{DefDBDualZero}
-&\frac{n!}{(n+l)!}\binom{a^\dagger a}{n}a^l \quad l \geq 0, \\
-&a^{\dagger|l|}\frac{n!}{(n+|l|)!}\binom{a^\dagger a}{n} \quad l < 0.
+\check{\rho}_n^l=&\frac{n!}{(n+l)!}\binom{a^\dagger a}{n}a^l \quad l \geq 0, \\
+\check{\rho}_n^l=&a^{\dagger|l|}\frac{n!}{(n+|l|)!}\binom{a^\dagger a}{n} \quad l < 0.
 \end{align}
+
+These states play an important part in the following sections, as they allow us to evaluate $L$ terms as well as trace over cavity degrees of freedom explicitly.
 
 \section{Laser Cooling and Projection Operators}\label{CoolingAppendix}
 
@@ -700,13 +702,13 @@ P\dot{\rho} = P[L_0]P \rho(t) + \sum_{m} P L_1 I_{m} Q L_1 P \rho(t_0).
 
 
 
-\section{Evaluation of Trace Term}\label{TraceAppendix}
+\subsection{Evaluation of Trace Term}\label{TraceAppendix}
 
 In order to calculate the $G(\nu_m,0)$ terms in \eqref{eq:projected_master_equation}, the term
 
 \begin{equation}\label{CoolingTrace}
 T=Tr_a[X_ae^{L_at}X_a\rho_{st}],
-\end{equation} must be explicitly calculated first. The calculation hinges on the Damping Basis states detailed above. The cavity's stationary state is taken to be the base zero temperature state
+\end{equation} must be calculated explicitly. The calculation hinges on the damping basis states detailed in Appendix \ref{App1}. The cavity's stationary state is taken to be the zero temperature base state.
 
 \begin{equation}
 \rho_{st} = \Ket{0}\Bra{0},
@@ -717,17 +719,17 @@ X_a = \frac{(\alpha_0a^{\dagger}+\alpha_0^*a)}{\sqrt{2}}.
 \end{equation} The first step is to separate the term \eqref{CoolingTrace} using \eqref{DampingBasisCompleteness}
 
 \begin{equation}
-Tr_a[X_ae^{L_at}X_a\rho_st] = \sum_\lambda Tr_a[X_ae^{L_at}\hat{\rho}_\lambda] \otimes Tr_a[\check{\rho}_\lambda X_a\Ket{0}\Bra{0}].
+Tr_c[X_ae^{L_at}X_a\rho_st] = \sum_\lambda Tr_c[X_ae^{L_at}\hat{\rho}_\lambda] \otimes Tr_c[\check{\rho}_\lambda X_a\Ket{0}\Bra{0}].
 \end{equation} In this context $\lambda$ refers exclusively to the cavity eigenvalues. The $a$ term of $X_a$ is zero when applied to $\rho_{st}$ and so 
 
 \begin{align}
-T=& \alpha_0\sum_\lambda Tr_a[X_ae^{L_at}\hat{\rho}_\lambda] \otimes Tr_a[\check{\rho}_\lambda\Ket{1}\Bra{0}],\\
-=&\frac{\alpha_0}{\sqrt{2}}\sum_\lambda Tr_a[X_ae^{L_at}\hat{\rho}_\lambda] \delta_{N,0}\delta_{l,-1},\\
-=&\frac{\alpha_0}{\sqrt{2}} Tr_a[X_ae^{L_at}\hat{\rho}_{0,-1}],\\
-=&\frac{\alpha_0}{\sqrt{2}}e^{-\frac{\kappa}{2}} Tr_a[X_a\hat{\rho}_{0,-1}],\\
-=&\frac{\alpha_0}{2}e^{-\frac{\kappa}{2}}\alpha_0^*Tr_a[\Ket{0}\Bra{0}],\\
+T=& \alpha_0\sum_\lambda Tr_c[X_ae^{L_at}\hat{\rho}_\lambda] \otimes Tr_c[\check{\rho}_\lambda\Ket{1}\Bra{0}],\\
+=&\frac{\alpha_0}{\sqrt{2}}\sum_\lambda Tr_c[X_ae^{L_at}\hat{\rho}_\lambda] \delta_{n,0}\delta_{l,-1},\\
+=&\frac{\alpha_0}{\sqrt{2}} Tr_c[X_ae^{L_at}\hat{\rho}_0^{-1}],\\
+=&\frac{\alpha_0}{\sqrt{2}}e^{-\frac{\kappa}{2}} Tr_c[X_a\hat{\rho}_0^{-1}],\\
+=&\frac{\alpha_0}{2}e^{-\frac{\kappa}{2}}\alpha_0^*Tr_c[\Ket{0}\Bra{0}],\\
 =&\frac{|\alpha_0|^2}{2}e^{-\frac{\kappa}{2}}.
-\end{align} Here we used the fact that $F\hat{\rho_{0,-1}}=\Ket{0}\Bra{0}$. 
+\end{align} Here we used the fact that $F\hat{\rho}_0^{-1}=\Ket{0}\Bra{0}$. 
 
 
 
